style.css
/* ... */
.subcategory-menu img {
  filter: grayscale(40%);
}

.subcategory-menu li {
  list-style-type: none;
  font-size: 1em;
  padding: 0.5em;
  font-weight: 400;
  transition: font-weight 80ms ease-in-out;
}

.subcategory-menu li:hover {
  font-weight: 550;
}

.subcategory-menu ul {
  padding: 0;
}

.subcategory-menu ul li:nth-child(1) {
  font-weight: 650;
}

.subcategory-menu ul:nth-child(2) li:nth-child(4) {
  color: rgb(206, 6, 6);
  font-weight: 750;
  text-transform: uppercase;
}

.left-menu > li:focus-within .subcategory-menu {
  opacity: 1;
  visibility: visible;
}
/* End of Drop-down Panel */

/* Navigation Bar Hover Effect */
.right-menu > li::after,
.left-menu > li::after {
  content: "";
  position: absolute;
  width: 100%;
  background: black;
  border-radius: 5px;
  height: 0.14em;
  top: 2.85em;
  left: 0;
  transform: scaleX(0);
}

.left-menu > li:hover::after,
.right-menu > li:hover::after {
  transform: scaleX(1);
}

.left-menu a:link,
.left-menu a:visited,
.right-menu a:link,
.right-menu a:visited {
  color: inherit;
  text-decoration: none;
}
/* End of Navigation Bar Hover Effect */
/*=========================================== End of Navigation bar ===========================================*/

/*=========================================== Homepage Banner Section ===========================================*/
.hp-heroimg {
  position: relative;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
}

.hp-heroimg img {
  width: 100%;
  height: calc(100vh - 4em);
  object-fit: cover;
  object-position: center 5%;
}

.hp-width-container {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  height: 100vh;
  width: 62.65%;
}

.hp-heroimg .hp-cta-container {
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 50%;
  left: 0;
  transform: translateY(-50%);
  gap: 2em;
}

.hp-heroimg h1 {
  font-size: 3.5em;
  color: white;
  margin: 0;
}

.hp-cta-botton {
  font-weight: bold;
  white-space: nowrap;
  color: #3a3a3a;
  background-color: rgba(255, 255, 255, 0.856);
  width: fit-content;
  padding: 1em 3em;
  margin: 0;
  cursor: pointer;
  transition: color 110ms ease-in-out, background-color 110ms ease-in-out;
}

.hp-cta-botton:hover {
  color: white;
  background: #2a291b;
}
/*=========================================== End of Homepage Banner Section ===========================================*/

/*=========================================== Homepage Collection Section ===========================================*/
.collection-container {
  display: flex;
  flex-direction: column;
  margin-bottom: calc(100vw / 15 - 100vw / 20);
}

.hp-collection {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 1em 0;
}

.hp-collection > p:nth-child(1) {
  position: relative;
  font-size: 2.75em;
  font-weight: 700;
  text-transform: uppercase;
  white-space: nowrap;
  text-align: center;
  color: black;
  width: fit-content;
  margin: 3vmax;
}

.hp-collection > p:nth-child(2) {
  width: 90vw;
}

.hp-collection > p:nth-child(1)::after {
  content: "";
  display: block;
  width: 40%;
  position: absolute;
  background: black;
  height: 0.015em;
  bottom: -30%;
  left: 50%;
  transform: translateX(-50%);
}

.hp-aboutus-container {
  width: 100%;
  height: 30vmax;
  background-image: url(/resources/concrete-backdrop.jpg);
  overflow: hidden;
}

.hp-collection > .hp-aboutus-container > p {
  box-sizing: border-box;
  float: left;
  width: 50%;
  height: 80%;
  margin: 1.5em 0;
  padding: calc(100vw / 4 - 100vw / 5);
  color: white;
  font-size: 1em;
  text-align: right;
  line-height: 3vmax;
  overflow: hidden;
}

.hp-collection > .hp-aboutus-container > img {
  float: right;
  width: 50%;
  height: inherit;
  object-fit: cover;
  object-position: center 30%;
  filter: brightness(130%) grayscale(100%) contrast(0.9);
}

.hp-collection p {
  width: 80%;
  text-align: center;
  margin: calc(100vh / 30 - 100vh / 100);
}

.hp-collection p:nth-child(2) {
  padding-bottom: 2em;
}

.hp-card-container {
  display: flex;
  gap: 1.5em;
}

.hp-card-container:nth-of-type(1) {
  padding-bottom: calc(100vw / 15 - 100vw / 45);
}

.hp-card-img-container {
  display: flex;
  position: relative;
  overflow: hidden;
}

.hp-card-img-container-2 {
  display: flex;
  overflow: hidden;
  position: relative;
  filter: grayscale(25%);
}

.hp-card-container .hp-card-img-container img {
  width: calc(100vw / 3 - 100vw / 12);
  height: auto;
}

.hp-card-container .hp-card-img-container-2 img {
  width: calc(100vw / 3 - 100vw / 8);
  height: calc(100vw / 3 - 100vw / 8);
  object-fit: cover;
}

.align-center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.hp-card-container .hp-cta-botton,
.hp-card-container .hp-cta-botton {
  opacity: 0;
  visibility: hidden;
  transition: opacity 150ms ease-in-out, visibility 150ms ease-in-out;
}

.hp-card-img-container:hover .hp-cta-botton,
.hp-card-img-container-2:hover .hp-cta-botton {
  opacity: 1;
  visibility: visible;
}

.hp-card-container > .hp-card-img-container > img,
.hp-card-container > .hp-card-img-container-2 > img {
  filter: grayscale(45%);
  transform: none;
  transition: transform 350ms ease-in-out, filter 100ms ease-in;
}

.hp-card-img-container:hover img,
.hp-card-img-container-2:hover img {
  transform: scale(1.175);
  filter: grayscale(0%) contrast(110%) saturate(105%);
}
/*=========================================== End of Homepage Collection Section ===========================================*/

/*=========================================== Footer Section ===========================================*/
footer {
  display: flex;
  background-color: #2a291b;
  justify-content: center;
}

.footer-content {
  display: flex;
  min-width: 66.5%;
  height: auto;
  margin: 0;
  padding: 0;
  justify-content: flex-start;
  background-color: #2a291b;
  color: white;
}
/* ... */

